# coreuseless

./: .gitignore  BUILDING.md  Makefile  README.md  configure.ac  generate_makefile.sh  meson.build
.cache/clangd/index/: cat.c.D79823DFF5AF52C6.idx  cp.c.D55FC67F0F6CDCBE.idx  echo.c.28BA104F5421904F.idx  false.c.4397110526A4935D.idx  ln.c.E4A4E290433881DD.idx  ls.c.FD4B19FC02976D37.idx  mkdir.c.5263A65E17478405.idx  mv.c.32549238798D4DAA.idx  rm.c.E02163FA7EFD38DF.idx  touch.c.93919DF02449F393.idx  true.c.2D4727187BBA005F.idx  types.h.F7E3345E9433070F.idx  utils.c.16CE49ABCBE57B48.idx  utils.h.EC4E60BF6DD35A45.idx  yes.c.06EF10110B61CC95.idx
include/: types.h  utils.h
src/: Makefile.am  cat.c  cp.c  echo.c  false.c  head.c  ln.c  ls.c  mkdir.c  mktemp.c  mv.c  nl.c  pwd.c  rm.c  sleep.c  touch.c  true.c  uname.c  unlink.c  utils.c  yes.c
